--- a/alg.c.library.html
+++ b/alg.c.library.html
@@ -2,14 +2,12 @@
 The header <span class='texttt'>&lt;cstdlib&gt;</span> (<a href='cstdlib.syn'>[cstdlib.syn]</a>)
 declares the functions described in this subclause.
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p><p ><span class='indexparent'><a class='index' id='bsearch'></a></span><span class='indexparent'><a class='index' id='qsort'></a></span><code class='itemdecl'>
-extern "C" void* bsearch(const void* key, const void* base, size_t nmemb, size_t size,
-                         int (*compar)(const void*, const void*));
-extern "C++" void* bsearch(const void* key, const void* base, size_t nmemb, size_t size,
-                           int (*compar)(const void*, const void*));
-extern "C" void qsort(void* base, size_t nmemb, size_t size,
-                      int (*compar)(const void*, const void*));
-extern "C++" void qsort(void* base, size_t nmemb, size_t size,
-                        int (*compar)(const void*, const void*));
+void* bsearch(const void* key, const void* base, size_t nmemb, size_t size,
+              <i>c-compare-pred</i>* compar);
+void* bsearch(const void* key, const void* base, size_t nmemb, size_t size,
+              <i>compare-pred</i>* compar);
+void qsort(void* base, size_t nmemb, size_t size, <i>c-compare-pred</i>* compar);
+void qsort(void* base, size_t nmemb, size_t size, <i>compare-pred</i>* compar);
 </code></p></div><div class='itemdescr'></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Effects:</i>
 These functions have the semantics specified in the C standard library.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Remarks:</i>
 The behavior is undefined
