--- a/conventions.html
+++ b/conventions.html
@@ -16,7 +16,18 @@ from <a href='utility.requirements'>[utility.requirements]</a> include:
 <span class='texttt'>CopyConstructible</span>.
 Examples from <a href='iterator.requirements'>[iterator.requirements]</a> include:
 <span class='texttt'>InputIterator</span>,
-<span class='texttt'>ForwardIterator</span>.</p></div></div><div id='enumerated.types'><h4 ><a class='secnum' href='#enumerated.types' style='min-width:133pt'>17.4.2.1.2</a> Enumerated types <a class='abbr_ref' href='enumerated.types'>[enumerated.types]</a></h4><div class='para' id='enumerated.types-1'><div class='marginalizedparent'><a class='marginalized' href='#enumerated.types-1'>1</a></div><p >Several types defined in Clause <a href='input.output'>[input.output]</a> are
+<span class='texttt'>ForwardIterator</span>.</p></div></div><div id='expos.only.types'><h4 ><a class='secnum' href='#expos.only.types' style='min-width:133pt'>17.4.2.1.2</a> Exposition-only types <a class='abbr_ref' href='expos.only.types'>[expos.only.types]</a></h4><div class='para' id='expos.only.types-1'><div class='marginalizedparent'><a class='marginalized' href='#expos.only.types-1'>1</a></div><p >Several types defined in Clauses <a href='language.support'>[language.support]</a> through <a href='thread'>[thread]</a>
+and Annex <a href='depr'>[depr]</a> that are used as function parameter or return types are defined
+for the purpose of exposition only in order to capture their language linkage. The
+declarations of such types are followed by a comment ending in <i>exposition only</i>.
+[&nbsp;<i>Example:</i><span class='space'></span>
+</p><pre class='codeblock'>
+namespace std {
+  extern "C" using <i>some-handler<span class='nocorr'></span></i> = int(int, void*, double);  <span class='comment'>// <i>exposition only</i>
+</span>}
+</pre><p >The type placeholder <span class='texttt'><i>some-handler</i></span> can now be used to specify a function
+that takes a callback parameter with C language linkage.
+<i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div><div id='enumerated.types'><h4 ><a class='secnum' href='#enumerated.types' style='min-width:133pt'>17.4.2.1.3</a> Enumerated types <a class='abbr_ref' href='enumerated.types'>[enumerated.types]</a></h4><div class='para' id='enumerated.types-1'><div class='marginalizedparent'><a class='marginalized' href='#enumerated.types-1'>1</a></div><p >Several types defined in Clause <a href='input.output'>[input.output]</a> are
 <a class='hidden_link' href='#def:enumerated_types' id='def:enumerated_types'><i>enumerated types</i></a>.
 <span class='indexparent'><a class='index' id='type,enumerated'></a></span>Each enumerated type may be implemented as an enumeration or as a synonym for
 an enumeration.<a class='footnotenum' href='#footnote-162'>162</a></p></div><div class='para' id='enumerated.types-2'><div class='marginalizedparent'><a class='marginalized' href='#enumerated.types-2'>2</a></div><p >The enumerated type <a class='hidden_link' href='#def:enumerated' id='def:enumerated'><i>enumerated</i></a> can be written:</p><pre class='codeblock'>
@@ -31,7 +42,7 @@ static const <a class='hidden_link' href='#def:enumerated_C3' id='def:enumerated
 <a class='hidden_link' href='#def:enumerated_elements' id='def:enumerated_elements'><i>enumerated elements</i></a>
 for this particular enumerated type.
 <span class='indexparent'><a class='index' id='type,enumerated'></a></span>All such elements have distinct values.</p></div><div class='footnote' id='footnote-162'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-162'>162)</a></div><p >Such as an integer type, with constant integer
-values (<a href='basic.fundamental'>[basic.fundamental]</a>).</p></div></div><div id='bitmask.types'><h4 ><a class='secnum' href='#bitmask.types' style='min-width:133pt'>17.4.2.1.3</a> Bitmask types <a class='abbr_ref' href='bitmask.types'>[bitmask.types]</a></h4><div class='para' id='bitmask.types-1'><div class='marginalizedparent'><a class='marginalized' href='#bitmask.types-1'>1</a></div><p >Several types defined in Clauses <a href='language.support'>[language.support]</a> through <a href='thread'>[thread]</a>
+values (<a href='basic.fundamental'>[basic.fundamental]</a>).</p></div></div><div id='bitmask.types'><h4 ><a class='secnum' href='#bitmask.types' style='min-width:133pt'>17.4.2.1.4</a> Bitmask types <a class='abbr_ref' href='bitmask.types'>[bitmask.types]</a></h4><div class='para' id='bitmask.types-1'><div class='marginalizedparent'><a class='marginalized' href='#bitmask.types-1'>1</a></div><p >Several types defined in Clauses <a href='language.support'>[language.support]</a> through <a href='thread'>[thread]</a>
 and Annex <a href='depr'>[depr]</a> are
 <a class='hidden_link' href='#def:bitmask_types' id='def:bitmask_types'><i>bitmask types</i></a>.
 <span class='indexparent'><a class='index' id='type,bitmask'></a></span>Each bitmask type can be implemented as an
@@ -97,7 +108,7 @@ a value <i>Y</i> in an object
 <a class='hidden_link' href='#def:is_set' id='def:is_set'><i>is set</i></a>
 in the object
 <i>X</i> if the expression <i>X</i> <span class='texttt'>&amp;</span> <i>Y</i> is nonzero.
-</p></li></ul></div></div><div id='character.seq'><h4 ><a class='secnum' href='#character.seq' style='min-width:133pt'>17.4.2.1.4</a> Character sequences <a class='abbr_ref' href='character.seq'>[character.seq]</a></h4><div class='para' id='character.seq-1'><div class='marginalizedparent'><a class='marginalized' href='#character.seq-1'>1</a></div><p >The C standard library makes widespread use
+</p></li></ul></div></div><div id='character.seq'><h4 ><a class='secnum' href='#character.seq' style='min-width:133pt'>17.4.2.1.5</a> Character sequences <a class='abbr_ref' href='character.seq'>[character.seq]</a></h4><div class='para' id='character.seq-1'><div class='marginalizedparent'><a class='marginalized' href='#character.seq-1'>1</a></div><p >The C standard library makes widespread use
 <span class='indexparent'><a class='index' id='library,C_standard'></a></span>of characters and character sequences that follow a few uniform conventions:</p><ul ><li ><p >A
 <a class='hidden_link' href='#def:letter' id='def:letter'><i>letter</i></a>
 is any of the 26 lowercase or 26
@@ -141,7 +152,7 @@ A character sequence can be designated by a pointer value
 <i>S</i> that points to its first element.
 </p></li></ul></div><div class='footnote' id='footnote-163'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-163'>163)</a></div><p >declared in
 <span class='texttt'>&lt;clocale&gt;</span> (<a href='c.locales'>[c.locales]</a>).
-<span class='indexparent'><a class='index' id='setlocale'></a></span><span class='indexparent'><a class='index' id='setlocale'></a></span><span class='indexparent'><a class='index' id='clocale'></a></span><span class='indexparent'><a class='index' id='clocale'></a></span></p></div><div id='byte.strings'><h4 ><a class='secnum' href='#byte.strings' style='min-width:148pt'>17.4.2.1.4.1</a> Byte strings <a class='abbr_ref' href='byte.strings'>[byte.strings]</a></h4><div class='para' id='byte.strings-1'><div class='marginalizedparent'><a class='marginalized' href='#byte.strings-1'>1</a></div><p >A
+<span class='indexparent'><a class='index' id='setlocale'></a></span><span class='indexparent'><a class='index' id='setlocale'></a></span><span class='indexparent'><a class='index' id='clocale'></a></span><span class='indexparent'><a class='index' id='clocale'></a></span></p></div><div id='byte.strings'><h4 ><a class='secnum' href='#byte.strings' style='min-width:148pt'>17.4.2.1.5.1</a> Byte strings <a class='abbr_ref' href='byte.strings'>[byte.strings]</a></h4><div class='para' id='byte.strings-1'><div class='marginalizedparent'><a class='marginalized' href='#byte.strings-1'>1</a></div><p >A
 <span class='indexparent'><a class='index' id='string,null-terminated_byte'></a></span><span class='indexparent'><a class='index' id='NTBS'></a></span><a class='hidden_link' href='#def:null-terminated_byte_string' id='def:null-terminated_byte_string'><i>null-terminated byte string</i></a>,
 or <span class='textsc'>ntbs</span>,
 is a character sequence whose highest-addressed element
@@ -168,7 +179,7 @@ function signatures declared in
 <span class='indexparent'><a class='index' id='cstring'></a></span><span class='indexparent'><a class='index' id='cstring'></a></span>The size of some of these character sequences is limited by
 a length value, maintained separately from the character sequence.</p></div><div class='footnote' id='footnote-165'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-165'>165)</a></div><p >A string literal, such as
 <span class='texttt'>"abc"</span>,
-is a static <span class='textsc'>ntbs</span>.</p></div></div><div id='multibyte.strings'><h4 ><a class='secnum' href='#multibyte.strings' style='min-width:148pt'>17.4.2.1.4.2</a> Multibyte strings <a class='abbr_ref' href='multibyte.strings'>[multibyte.strings]</a></h4><div class='para' id='multibyte.strings-1'><div class='marginalizedparent'><a class='marginalized' href='#multibyte.strings-1'>1</a></div><p >A
+is a static <span class='textsc'>ntbs</span>.</p></div></div><div id='multibyte.strings'><h4 ><a class='secnum' href='#multibyte.strings' style='min-width:148pt'>17.4.2.1.5.2</a> Multibyte strings <a class='abbr_ref' href='multibyte.strings'>[multibyte.strings]</a></h4><div class='para' id='multibyte.strings-1'><div class='marginalizedparent'><a class='marginalized' href='#multibyte.strings-1'>1</a></div><p >A
 <span class='indexparent'><a class='index' id='NTBS'></a></span><span class='indexparent'><a class='index' id='NTMBS'></a></span><a class='hidden_link' href='#def:null-terminated_multibyte_string,' id='def:null-terminated_multibyte_string,'><i>null-terminated multibyte string,</i></a>
 or <span class='textsc'>ntmbs</span>,
 <span class='indexparent'><a class='index' id='string,null-terminated_multibyte'></a></span>is an <span class='textsc'>ntbs</span> that constitutes a
