--- a/cstdlib.syn.html
+++ b/cstdlib.syn.html
@@ -13,12 +13,18 @@ namespace std {
 #define MB_CUR_MAX <i><span class='texttt'>see below</span></i>
 
 namespace std {
+  <span class='comment'>// Exposition-only function type aliases
+</span>  extern "C" using <i>c-atexit-handler<span class='nocorr'></span></i> = void();                        <span class='comment'>// <i>exposition only</i>
+</span>  extern "C++" using <i>atexit-handler<span class='nocorr'></span></i> = void();                        <span class='comment'>// <i>exposition only</i>
+</span>  extern "C" using <i>c-compare-pred<span class='nocorr'></span></i> = int(const void* , const void*);  <span class='comment'>// <i>exposition only</i>
+</span>  extern "C++" using <i>compare-pred<span class='nocorr'></span></i> = int(const void* , const void*);  <span class='comment'>// <i>exposition only</i>
+</span>
   <span class='comment'>// <a href='support.start.term'>[support.start.term]</a>, start and termination
 </span>  [[noreturn]] void abort();
-  extern "C" int atexit(void (*func)());
-  extern "C++" int atexit(void (*func)());
-  extern "C" int at_quick_exit(void (*func)());
-  extern "C++" int at_quick_exit(void (*func)());
+  int atexit(<i>c-atexit-handler</i>* func);
+  int atexit(<i>atexit-handler</i>* func);
+  int at_quick_exit(<i>c-atexit-handler</i>* func);
+  int at_quick_exit(<i>atexit-handler</i>* func);
   [[noreturn]] void exit(int status);
   [[noreturn]] void _Exit(int status);
   [[noreturn]] void quick_exit(int status);
@@ -53,14 +59,12 @@ namespace std {
   size_t wcstombs(char* s, const wchar_t* pwcs, size_t n);
 
   <span class='comment'>// <a href='alg.c.library'>[alg.c.library]</a>, C standard library algorithms
-</span>  extern "C" void* bsearch(const void* key, const void* base, size_t nmemb, size_t size,
-                           int (*compar)(const void* , const void*));
-  extern "C++" void* bsearch(const void* key, const void* base, size_t nmemb, size_t size,
-                             int (*compar)(const void* , const void*));
-  extern "C" void qsort(void* base, size_t nmemb, size_t size,
-                        int (*compar)(const void* , const void*));
-  extern "C++" void qsort(void* base, size_t nmemb, size_t size,
-                          int (*compar)(const void* , const void*));
+</span>  void* bsearch(const void* key, const void* base, size_t nmemb, size_t size,
+                <i>c-compare-pred</i>* compar);
+  void* bsearch(const void* key, const void* base, size_t nmemb, size_t size,
+                <i>compare-pred</i>* compar);
+  void qsort(void* base, size_t nmemb, size_t size, <i>c-compare-pred</i>* compar);
+  void qsort(void* base, size_t nmemb, size_t size, <i>compare-pred</i>* compar);
 
   <span class='comment'>// <a href='c.math.rand'>[c.math.rand]</a>, low-quality random number generation
 </span>  int rand();
@@ -78,7 +82,7 @@ namespace std {
   long long int llabs(long long int j);
 
   div_t div(int numer, int denom);
-  ldiv_t div(long int numer, long int denom);  <span class='comment'>// see <a href='library.c'>[library.c]</a>
+  ldiv_t div(long int numer, long int denom);             <span class='comment'>// see <a href='library.c'>[library.c]</a>
 </span>  lldiv_t div(long long int numer, long long int denom);  <span class='comment'>// see <a href='library.c'>[library.c]</a>
 </span>  ldiv_t ldiv(long int numer, long int denom);
   lldiv_t lldiv(long long int numer, long long int denom);
