--- a/depr.ostrstream.cons.html
+++ b/depr.ostrstream.cons.html
@@ -28,4 +28,4 @@ contains an <span class='textsc'>ntbs</span> whose first element is designated b
 <span class='texttt'>strlen(const char*)</span>
 is declared in
 <span class='texttt'>&lt;cstring&gt;</span>
-<span class='indexparent'><a class='index' id='strlen'></a></span><span class='indexparent'><a class='index' id='cstring'></a></span>(<a href='c.strings'>[c.strings]</a>).</p></div></div></div></body></html>
+<span class='indexparent'><a class='index' id='strlen'></a></span><span class='indexparent'><a class='index' id='cstring'></a></span>(<a href='cstring.syn'>[cstring.syn]</a>).</p></div></div></div></body></html>
