--- a/depr.ostrstream.html
+++ b/depr.ostrstream.html
@@ -52,7 +52,7 @@ contains an <span class='textsc'>ntbs</span> whose first element is designated b
 <span class='texttt'>strlen(const char*)</span>
 is declared in
 <span class='texttt'>&lt;cstring&gt;</span>
-<span class='indexparent'><a class='index' id='strlen'></a></span><span class='indexparent'><a class='index' id='cstring'></a></span>(<a href='c.strings'>[c.strings]</a>).</p></div></div><div id='members'><h4 ><a class='secnum' href='#members' style='min-width:118pt'>D.5.3.2</a> Member functions <a class='abbr_ref' href='depr.ostrstream.members'>[depr.ostrstream.members]</a></h4><p ><span class='indexparent'><a class='index' id='rdbuf,ostrstream'></a></span><span class='indexparent'><a class='index' id='ostrstream,rdbuf'></a></span><code class='itemdecl'>
+<span class='indexparent'><a class='index' id='strlen'></a></span><span class='indexparent'><a class='index' id='cstring'></a></span>(<a href='cstring.syn'>[cstring.syn]</a>).</p></div></div><div id='members'><h4 ><a class='secnum' href='#members' style='min-width:118pt'>D.5.3.2</a> Member functions <a class='abbr_ref' href='depr.ostrstream.members'>[depr.ostrstream.members]</a></h4><p ><span class='indexparent'><a class='index' id='rdbuf,ostrstream'></a></span><span class='indexparent'><a class='index' id='ostrstream,rdbuf'></a></span><code class='itemdecl'>
 strstreambuf* rdbuf() const;
 </code></p><div class='itemdescr'></div><div class='para' id='members-1'><div class='marginalizedparent'><a class='marginalized' href='#members-1'>1</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>(strstreambuf*)&amp;sb</span>.
