--- a/depr.str.strstreams.html
+++ b/depr.str.strstreams.html
@@ -137,7 +137,8 @@ object whose number of elements <span class='texttt'>N</span> is determined as f
 <span class='indexparent'><a class='index' id='strlen'></a></span></p></li><li ><p >If
 <span class='texttt'>n &lt; 0</span>,
 <span class='texttt'>N</span> is
-<span class='texttt'>INT_MAX</span>.<a class='footnotenum' href='#footnote-334'>334</a></p></li></ul></div></div><div class='para' id='depr.strstreambuf.cons-5'><div class='marginalizedparent'><a class='marginalized' href='#depr.strstreambuf.cons-5'>5</a></div><div class='itemdescr'><p >If <span class='texttt'>pbeg_arg</span> is a null pointer, the function executes:</p><pre class='codeblock'>
+<span class='texttt'>INT_MAX</span>.<a class='footnotenum' href='#footnote-334'>334</a>
+</p></li></ul></div></div><div class='para' id='depr.strstreambuf.cons-5'><div class='marginalizedparent'><a class='marginalized' href='#depr.strstreambuf.cons-5'>5</a></div><div class='itemdescr'><p >If <span class='texttt'>pbeg_arg</span> is a null pointer, the function executes:</p><pre class='codeblock'>
 setg(gnext_arg, gnext_arg, gnext_arg + N);
 </pre></div></div><div class='para' id='depr.strstreambuf.cons-6'><div class='marginalizedparent'><a class='marginalized' href='#depr.strstreambuf.cons-6'>6</a></div><div class='itemdescr'><p >Otherwise, the function executes:</p><pre class='codeblock'>
 setg(gnext_arg, gnext_arg, pbeg_arg);
@@ -163,12 +164,11 @@ and
 <span class='texttt'>strlen(const char*)</span>
 is declared in
 <span class='texttt'>&lt;cstring&gt;</span>
-<span class='indexparent'><a class='index' id='strlen'></a></span><span class='indexparent'><a class='index' id='cstring'></a></span>(<a href='c.strings'>[c.strings]</a>).
+<span class='indexparent'><a class='index' id='strlen'></a></span><span class='indexparent'><a class='index' id='cstring'></a></span>(<a href='cstring.syn'>[cstring.syn]</a>).
 The macro
 <span class='texttt'>INT_MAX</span>
 is defined in
-<span class='texttt'>&lt;climits&gt;</span> (<a href='support.limits'>[support.limits]</a>).
-<span class='indexparent'><a class='index' id='climits'></a></span></p></div></div><div id='depr.strstreambuf.members'><h4 ><a class='secnum' href='#depr.strstreambuf.members' style='min-width:118pt'>D.5.1.2</a> Member functions <a class='abbr_ref' href='depr.strstreambuf.members'>[depr.strstreambuf.members]</a></h4><p ><span class='indexparent'><a class='index' id='freeze,strstreambuf'></a></span><span class='indexparent'><a class='index' id='strstreambuf,freeze'></a></span><code class='itemdecl'>
+<span class='texttt'>&lt;climits&gt;</span><span class='indexparent'><a class='index' id='climits'></a></span> (<a href='climits.syn'>[climits.syn]</a>).</p></div></div><div id='depr.strstreambuf.members'><h4 ><a class='secnum' href='#depr.strstreambuf.members' style='min-width:118pt'>D.5.1.2</a> Member functions <a class='abbr_ref' href='depr.strstreambuf.members'>[depr.strstreambuf.members]</a></h4><p ><span class='indexparent'><a class='index' id='freeze,strstreambuf'></a></span><span class='indexparent'><a class='index' id='strstreambuf,freeze'></a></span><code class='itemdecl'>
 void freeze(bool freezefl = true);
 </code></p><div class='itemdescr'></div><div class='para' id='depr.strstreambuf.members-1'><div class='marginalizedparent'><a class='marginalized' href='#depr.strstreambuf.members-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
 If <span class='texttt'>strmode</span> &amp; <span class='texttt'>dynamic</span> is non-zero, alters the
@@ -483,7 +483,7 @@ contains an <span class='textsc'>ntbs</span> whose first element is designated b
 <span class='texttt'>strlen(const char*)</span>
 is declared in
 <span class='texttt'>&lt;cstring&gt;</span>
-<span class='indexparent'><a class='index' id='strlen'></a></span><span class='indexparent'><a class='index' id='cstring'></a></span>(<a href='c.strings'>[c.strings]</a>).</p></div></div><div id='depr.ostrstream.members'><h4 ><a class='secnum' href='#depr.ostrstream.members' style='min-width:118pt'>D.5.3.2</a> Member functions <a class='abbr_ref' href='depr.ostrstream.members'>[depr.ostrstream.members]</a></h4><p ><span class='indexparent'><a class='index' id='rdbuf,ostrstream'></a></span><span class='indexparent'><a class='index' id='ostrstream,rdbuf'></a></span><code class='itemdecl'>
+<span class='indexparent'><a class='index' id='strlen'></a></span><span class='indexparent'><a class='index' id='cstring'></a></span>(<a href='cstring.syn'>[cstring.syn]</a>).</p></div></div><div id='depr.ostrstream.members'><h4 ><a class='secnum' href='#depr.ostrstream.members' style='min-width:118pt'>D.5.3.2</a> Member functions <a class='abbr_ref' href='depr.ostrstream.members'>[depr.ostrstream.members]</a></h4><p ><span class='indexparent'><a class='index' id='rdbuf,ostrstream'></a></span><span class='indexparent'><a class='index' id='ostrstream,rdbuf'></a></span><code class='itemdecl'>
 strstreambuf* rdbuf() const;
 </code></p><div class='itemdescr'></div><div class='para' id='depr.ostrstream.members-1'><div class='marginalizedparent'><a class='marginalized' href='#depr.ostrstream.members-1'>1</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>(strstreambuf*)&amp;sb</span>.
