--- a/diff.mods.to.declarations.html
+++ b/diff.mods.to.declarations.html
@@ -1,9 +1,13 @@
-<!DOCTYPE html><html lang='en'><head><title>[diff.mods.to.declarations]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='annexnum' style='min-width:73pt'>Annex C&emsp;(informative)</a> Compatibility <a class='abbr_ref' href='./#diff'>[diff]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>C.5</a> C standard library <a class='abbr_ref' href='diff.library#diff.mods.to.declarations'>[diff.library]</a></h2><div id='diff.mods.to.declarations'><h3 ><a class='secnum' style='min-width:103pt'>C.5.3</a> Modifications to declarations <a class='abbr_ref'>[diff.mods.to.declarations]</a></h3><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >Header
-<span class='texttt'>&lt;cstring&gt;</span>:
-<span class='indexparent'><a class='index' id='cstring'></a></span>The following functions have different declarations:
-</p><ul ><li ><p ><span class='texttt'>strchr</span>
+<!DOCTYPE html><html lang='en'><head><title>[diff.mods.to.declarations]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='annexnum' style='min-width:73pt'>Annex C&emsp;(informative)</a> Compatibility <a class='abbr_ref' href='./#diff'>[diff]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>C.5</a> C standard library <a class='abbr_ref' href='diff.library#diff.mods.to.declarations'>[diff.library]</a></h2><div id='diff.mods.to.declarations'><h3 ><a class='secnum' style='min-width:103pt'>C.5.3</a> Modifications to declarations <a class='abbr_ref'>[diff.mods.to.declarations]</a></h3><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >Header <span class='texttt'>&lt;cstring&gt;</span> (<a href='cstring.syn'>[cstring.syn]</a>)<span class='indexparent'><a class='index' id='cstring'></a></span>:
+The following functions have different declarations:</p><ul ><li ><p ><span class='texttt'>strchr</span>
 </p></li><li ><p ><span class='texttt'>strpbrk</span>
 </p></li><li ><p ><span class='texttt'>strrchr</span>
 </p></li><li ><p ><span class='texttt'>strstr</span>
 </p></li><li ><p ><span class='texttt'>memchr</span>
-</p></li></ul><p ><a href='c.strings'>[c.strings]</a> describes the changes.</p></div></div></div></body></html>
+</p></li></ul><p >Subclause <a href='cstring.syn'>[cstring.syn]</a> describes the changes.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >Header <span class='texttt'>&lt;cwchar&gt;</span> (<a href='cwchar.syn'>[cwchar.syn]</a>)<span class='indexparent'><a class='index' id='cwchar'></a></span>:
+The following functions have different declarations:</p><ul ><li ><p ><span class='texttt'>wcschr</span>
+</p></li><li ><p ><span class='texttt'>wcspbrk</span>
+</p></li><li ><p ><span class='texttt'>wcsrchr</span>
+</p></li><li ><p ><span class='texttt'>wcsstr</span>
+</p></li><li ><p ><span class='texttt'>wmemchr</span>
+</p></li></ul><p >Subclause <a href='cwchar.syn'>[cwchar.syn]</a> describes the changes.</p></div></div></div></body></html>
