--- a/diff.null.html
+++ b/diff.null.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html><html lang='en'><head><title>[diff.null]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='annexnum' style='min-width:73pt'>Annex C&emsp;(informative)</a> Compatibility <a class='abbr_ref' href='./#diff'>[diff]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>C.5</a> C standard library <a class='abbr_ref' href='diff.library#diff.null'>[diff.library]</a></h2><h3 ><a class='secnum' style='min-width:103pt'>C.5.2</a> Modifications to definitions <a class='abbr_ref' href='diff.mods.to.definitions#diff.null'>[diff.mods.to.definitions]</a></h3><div id='diff.null'><h4 ><a class='secnum' style='min-width:118pt'>C.5.2.4</a> Macro <span class='texttt'>NULL</span> <a class='abbr_ref'>[diff.null]</a></h4><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >The macro
+<!DOCTYPE html><html lang='en'><head><title>[diff.null]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='annexnum' style='min-width:73pt'>Annex C&emsp;(informative)</a> Compatibility <a class='abbr_ref' href='./#diff'>[diff]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>C.5</a> C standard library <a class='abbr_ref' href='diff.library#diff.null'>[diff.library]</a></h2><h3 ><a class='secnum' style='min-width:103pt'>C.5.2</a> Modifications to definitions <a class='abbr_ref' href='diff.mods.to.definitions#diff.null'>[diff.mods.to.definitions]</a></h3><div id='diff.null'><h4 ><a class='secnum' style='min-width:118pt'>C.5.2.7</a> Macro <span class='texttt'>NULL</span> <a class='abbr_ref'>[diff.null]</a></h4><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >The macro
 <span class='texttt'>NULL</span>,
 defined in any of
-<span class='indexparent'><a class='index' id='clocale'></a></span><span class='texttt'>&lt;clocale&gt;</span>,
-<span class='indexparent'><a class='index' id='cstddef'></a></span><span class='texttt'>&lt;cstddef&gt;</span>,
-<span class='indexparent'><a class='index' id='cstdio'></a></span><span class='texttt'>&lt;cstdio&gt;</span>,
-<span class='indexparent'><a class='index' id='cstdlib'></a></span><span class='texttt'>&lt;cstdlib&gt;</span>,
-<span class='indexparent'><a class='index' id='cstring'></a></span><span class='texttt'>&lt;cstring&gt;</span>,
-<span class='indexparent'><a class='index' id='ctime'></a></span><span class='texttt'>&lt;ctime&gt;</span>,
-or
-<span class='texttt'>&lt;cwchar&gt;</span>,
-<span class='indexparent'><a class='index' id='cwchar'></a></span>is an <span class='indexparent'><a class='index' id='definition_of_NULL'></a></span>implementation-defined C++ null pointer constant in
+<span class='texttt'>&lt;clocale&gt;</span> (<a href='c.locales'>[c.locales]</a>)<span class='indexparent'><a class='index' id='clocale'></a></span>,
+<span class='texttt'>&lt;cstddef&gt;</span> (<a href='cstddef.syn'>[cstddef.syn]</a>)<span class='indexparent'><a class='index' id='cstddef'></a></span>,
+<span class='texttt'>&lt;cstdio&gt;</span> (<a href='cstdio.syn'>[cstdio.syn]</a>)<span class='indexparent'><a class='index' id='cstdio'></a></span>,
+<span class='texttt'>&lt;cstdlib&gt;</span> (<a href='cstdlib.syn'>[cstdlib.syn]</a>)<span class='indexparent'><a class='index' id='cstdlib'></a></span>,
+<span class='texttt'>&lt;cstring&gt;</span> (<a href='cstring.syn'>[cstring.syn]</a>)<span class='indexparent'><a class='index' id='cstring'></a></span>,
+<span class='texttt'>&lt;ctime&gt;</span> (<a href='ctime.syn'>[ctime.syn]</a>)<span class='indexparent'><a class='index' id='ctime'></a></span>,
+or <span class='texttt'>&lt;cwchar&gt;</span> (<a href='cwchar.syn'>[cwchar.syn]</a>)<span class='indexparent'><a class='index' id='cwchar'></a></span>,
+is an <span class='indexparent'><a class='index' id='definition_of_NULL'></a></span>implementation-defined C++ null pointer constant in
 this International Standard (<a href='support.types'>[support.types]</a>).</p></div></div></div></body></html>
