--- a/language.support.html
+++ b/language.support.html
@@ -650,8 +650,8 @@ automatic, thread, or static storage
 duration and without calling functions passed to
 <span class='texttt'>atexit()</span> (<a href='basic.start.term'>[basic.start.term]</a>).
 <span class='indexparent'><a class='index' id='atexit'></a></span></p></div></div><p ><span class='indexparent'><a class='index' id='atexit'></a></span><code class='itemdecl'>
-extern "C" int atexit(void (*f)()) noexcept;
-extern "C++" int atexit(void (*f)()) noexcept;
+int atexit(<i>c-atexit-handler</i>* f) noexcept;
+int atexit(<i>atexit-handler</i>* f) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='support.start.term-6'><div class='marginalizedparent'><a class='marginalized' href='#support.start.term-6'>6</a></div><div class='itemdescr'><p ><i>Effects:</i>
 The
 <span class='texttt'>atexit()</span>
@@ -698,8 +698,8 @@ an <span class='indexparent'><a class='index' id='exit_status'></a></span>implem
 is returned.
 Otherwise the status returned is <span class='indexparent'><a class='index' id='exit_status'></a></span>implementation-defined.<a class='footnotenum' href='#footnote-219'>219</a>
 </p></li></ul></div></div><p ><span class='indexparent'><a class='index' id='at_quick_exit'></a></span><code class='itemdecl'>
-extern "C" int at_quick_exit(void (*f)()) noexcept;
-extern "C++" int at_quick_exit(void (*f)()) noexcept;
+int at_quick_exit(<i>c-atexit-handler</i>* f) noexcept;
+int at_quick_exit(<i>atexit-handler</i>* f) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='support.start.term-10'><div class='marginalizedparent'><a class='marginalized' href='#support.start.term-10'>10</a></div><div class='itemdescr'><p ><i>Effects:</i> The <span class='texttt'>at_quick_exit()</span> functions register the function pointed to by <span class='texttt'>f</span>
 to be called without arguments when <span class='texttt'>quick_exit</span> is called.
 It is unspecified whether a call to <span class='texttt'>at_quick_exit()</span> that does not
@@ -1838,7 +1838,9 @@ define a macro named <span class='texttt'>alignas</span>.</p><p ><span class='te
 namespace std {
   using sig_atomic_t = <i><span class='texttt'>see below</span></i>;
 
-  void (*signal(int sig, void (*func)(int)))(int);
+  extern "C" using <i>signal-handler<span class='nocorr'></span></i> = void(int);  <span class='comment'>// <i>exposition only</i>
+</span>  <i>signal-handler</i>* signal(int sig, <i>signal-handler</i>* func);
+
   int raise(int sig);
 }
 
