--- a/depr.strstreambuf.cons.html
+++ b/depr.strstreambuf.cons.html
@@ -51,7 +51,8 @@ object whose number of elements <span class='texttt'>N</span> is determined as f
 <span class='indexparent'><a class='index' id='strlen'></a></span></p></li><li ><p >If
 <span class='texttt'>n &lt; 0</span>,
 <span class='texttt'>N</span> is
-<span class='texttt'>INT_MAX</span>.<a class='footnotenum' href='#footnote-334'>334</a></p></li></ul></div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p >If <span class='texttt'>pbeg_arg</span> is a null pointer, the function executes:</p><pre class='codeblock'>
+<span class='texttt'>INT_MAX</span>.<a class='footnotenum' href='#footnote-334'>334</a>
+</p></li></ul></div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p >If <span class='texttt'>pbeg_arg</span> is a null pointer, the function executes:</p><pre class='codeblock'>
 setg(gnext_arg, gnext_arg, gnext_arg + N);
 </pre></div></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p >Otherwise, the function executes:</p><pre class='codeblock'>
 setg(gnext_arg, gnext_arg, pbeg_arg);
@@ -77,9 +78,8 @@ and
 <span class='texttt'>strlen(const char*)</span>
 is declared in
 <span class='texttt'>&lt;cstring&gt;</span>
-<span class='indexparent'><a class='index' id='strlen'></a></span><span class='indexparent'><a class='index' id='cstring'></a></span>(<a href='c.strings'>[c.strings]</a>).
+<span class='indexparent'><a class='index' id='strlen'></a></span><span class='indexparent'><a class='index' id='cstring'></a></span>(<a href='cstring.syn'>[cstring.syn]</a>).
 The macro
 <span class='texttt'>INT_MAX</span>
 is defined in
-<span class='texttt'>&lt;climits&gt;</span> (<a href='support.limits'>[support.limits]</a>).
-<span class='indexparent'><a class='index' id='climits'></a></span></p></div></div></div></body></html>
+<span class='texttt'>&lt;climits&gt;</span><span class='indexparent'><a class='index' id='climits'></a></span> (<a href='climits.syn'>[climits.syn]</a>).</p></div></div></div></body></html>
