--- a/support.runtime.html
+++ b/support.runtime.html
@@ -75,7 +75,9 @@ define a macro named <span class='texttt'>alignas</span>.</p><p ><span class='te
 namespace std {
   using sig_atomic_t = <i><span class='texttt'>see below</span></i>;
 
-  void (*signal(int sig, void (*func)(int)))(int);
+  extern "C" using <i>signal-handler<span class='nocorr'></span></i> = void(int);  <span class='comment'>// <i>exposition only</i>
+</span>  <i>signal-handler</i>* signal(int sig, <i>signal-handler</i>* func);
+
   int raise(int sig);
 }
 
